Fix ExpiringContestedResourceContent value overflow

--- a/packages/frontend/src/components/cards/dashboard/ExpiringContestedResourceContent.scss
+++ b/packages/frontend/src/components/cards/dashboard/ExpiringContestedResourceContent.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 0.5rem;
   width: max-content;
+  max-width: 100%;
 
   &__ValueContainer {
     display: inline-flex;
